--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,6 +17,6 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_STARTBOOTSTRAP_20C42 }}'
           channelId: live
-          projectId: startbootstrap-20c42
+          projectId: portfolio-mathurada-aor
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
